fix input width on safari mobile

--- a/scss/imports/core/_layouts.scss
+++ b/scss/imports/core/_layouts.scss
@@ -11,6 +11,11 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+input[type="text"]{
+    -moz-box-sizing:    border-box;
+    -webkit-box-sizing: border-box;
+     box-sizing:        border-box;
+}
 html {
     font-size: 62.5%; // => 10px = 1rem
 }
